--- a/movie-catalog-service/pom.xml
+++ b/movie-catalog-service/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-	<dependencies>		
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -27,6 +27,13 @@
     <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     <version>3.0.3</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-hystrix -->
+<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-hystrix</artifactId>
+    <version>1.3.0.RELEASE</version>
+</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -40,7 +47,7 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
- <dependencyManagement>
+  <dependencyManagement>
 		<dependencies>
 		<dependency>
     <groupId>org.springframework.cloud</groupId>
